--- a/.gitignore
+++ b/.gitignore
@@ -135,12 +135,14 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.artifacts
 .env
 .envrc
 .venv
 env/
 venv/
-mlproject_env/
+.mlproject_env
+.mlproject_env/
 ENV/
 env.bak/
 venv.bak/
