--- a/.gitignore
+++ b/.gitignore
@@ -134,15 +134,17 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
+# Artifacts
+artifacts/
+
 # Environments
-.artifacts
+mlproject_env/
 .env
 .envrc
 .venv
 env/
 venv/
-.mlproject_env
-.mlproject_env/
+
 ENV/
 env.bak/
 venv.bak/
